[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/minigame/hole_scene/hole_scene.gd" type="Script" id=1]
[ext_resource path="res://assets/Interior do caminhao com fundo.png" type="Texture" id=2]
[ext_resource path="res://assets/semafaro_vazio.png" type="Texture" id=3]
[ext_resource path="res://assets/semafaro_amarela.png" type="Texture" id=4]
[ext_resource path="res://assets/semafaro_vermelho.png" type="Texture" id=5]
[ext_resource path="res://assets/semafaro_verde.png" type="Texture" id=6]
[ext_resource path="res://assets/Fundo do caminhão.png" type="Texture" id=7]
[ext_resource path="res://assets/Celular.png" type="Texture" id=8]
[ext_resource path="res://assets/Icon.mensagem.png" type="Texture" id=9]

[node name="HoleMiniGame" type="Node2D"]
script = ExtResource( 1 )

[node name="FundoDoCaminhão" type="Sprite" parent="."]
position = Vector2( 495, 436 )
scale = Vector2( 0.700666, 0.700666 )
texture = ExtResource( 7 )

[node name="InteriorDoCaminhaoComFundo" type="Sprite" parent="."]
position = Vector2( 518, 451 )
scale = Vector2( 2.15833, 2.15833 )
texture = ExtResource( 2 )

[node name="SemafaroVazio" type="Sprite" parent="."]
position = Vector2( 615, 160 )
scale = Vector2( 2.48438, 2.48438 )
texture = ExtResource( 3 )

[node name="SemafaroVerde" type="Sprite" parent="SemafaroVazio"]
modulate = Color( 0.509804, 0.509804, 0.509804, 1 )
position = Vector2( 1.20755, 22.5408 )
scale = Vector2( 0.993746, 0.993746 )
texture = ExtResource( 6 )
offset = Vector2( -1.27231, 13.1473 )

[node name="SemafaroVermelho" type="Sprite" parent="SemafaroVazio"]
modulate = Color( 0.737255, 0.737255, 0.737255, 1 )
position = Vector2( 1.61005, -12.0754 )
scale = Vector2( 1.03165, 1.03165 )
texture = ExtResource( 5 )
offset = Vector2( -1.56065, 12.0951 )

[node name="SemafaroAmarela" type="Sprite" parent="SemafaroVazio"]
modulate = Color( 0.6, 0.6, 0.6, 1 )
position = Vector2( 0.805031, 5.23269 )
scale = Vector2( 1.03774, 1.03774 )
texture = ExtResource( 4 )
offset = Vector2( -0.775757, 12.4121 )

[node name="Celular" type="Sprite" parent="."]
position = Vector2( 769, 406 )
scale = Vector2( 0.525928, 0.511047 )
texture = ExtResource( 8 )

[node name="Iconmensagem" type="Sprite" parent="Celular"]
position = Vector2( 197.746, 121.319 )
scale = Vector2( 0.401937, 0.401937 )
texture = ExtResource( 9 )

[node name="Tmr_Vermelho" type="Timer" parent="."]
one_shot = true

[node name="Tmr_amarelo" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="tmr_Verde" type="Timer" parent="."]
one_shot = true

[node name="tmr_Celular" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Tmr_Vermelho" to="." method="_on_Tmr_Vermelho_timeout"]
[connection signal="timeout" from="Tmr_amarelo" to="." method="_on_Tmr_amarelo_timeout"]
[connection signal="timeout" from="tmr_Verde" to="." method="_on_tmr_Verde_timeout"]
[connection signal="timeout" from="tmr_Celular" to="." method="_on_tmr_Celular_timeout"]
